Complete implementation of Enviro365 Withdrawal Management System
Features:
- Full-stack application with Spring Boot backend and React frontend
- Investor portfolio management with balance calculations
- Withdrawal request submission with business rule validation
- Session-based authentication with user roles (ADMIN/INVESTOR)
- H2 database with UUID-based entity identification
- CSV report generation with filtering
- Docker containerization support

Backend:
- User authentication with session management
- Role-based access control (ADMIN/INVESTOR)
- Global exception handling
- MapStruct for DTO mapping
- Business rules: retirement age > 65, 90% withdrawal limit
- RESTful API with Swagger documentation

Frontend:
- Portfolio dashboard with real-time balance display
- Withdrawal form with client-side validation
- Withdrawal history with filtering and search
- CSV report download with date and status filters
- Responsive design with React Router

Configuration:
- Docker and Docker Compose support
- Environment variables for configuration
- Scripts for build, start, stop, logs, and status

Documentation:
- Complete README with API documentation
- All endpoints documented with examples
- User credentials and roles listed
- Docker deployment instructions